@@ -47,14 +47,13 @@
         </div>
         <div class="card bg-dark text-white">
             <div class="card-header">
-                <h4>Aliases</h4>
+                <h4>Aliases
+                    <button class="btn btn-primary float-right" id="createAlias">
+                        <i class="fas fa-plus"></i>
+                    </button>
+                </h4>
             </div>
-            <div class="card-body">
-                <table class="table table-dark table-bordered" id="imageAliasesTable">
-                    <tbody>
-
-                    </tbody>
-                </table>
+            <div class="card-body" id="imageAliasesCardBody">
             </div>
         </div>
         <div class="card bg-dark text-white">
@@ -78,7 +77,7 @@
 
     var imageByHostId = {}
 
-    var currentDetails = {
+    var currentImageDetails = {
         hostId: null,
         fingerprint: null
     }
@@ -96,7 +95,7 @@
         }else if(image.properties.hasOwnProperty("release")){
             version = image.properties.release;
         }
-        return image.aliases.length == 0 ? `${image.properties.os}-${version}` : image.aliases[0];
+        return image.aliases.length == 0 ? `${image.properties.os}-${version}` : image.aliases[0].name;
     }
 
     function makeImagesHtml(hosthtml, host, selectedProfile = null, selectedHost = null){
@@ -111,8 +110,6 @@
         $.each(host.images, function(_, image){
             let active = "";
 
-
-
             if(!imageByHostId.hasOwnProperty(host.hostId)){
                 imageByHostId[host.hostId]  = {};
             }
@@ -126,7 +123,7 @@
             hosthtml += `<li class="nav-item view-image ${active}"
                 data-host-id="${host.hostId}"
                 data-fingerprint="${image.fingerprint}"
-                data-alias="${host.hostAlias}"
+                data-host-alias="${host.hostAlias}"
                 >
               <a class="nav-link" href="#">
                 <i class="nav-icon fa fa-${icon}"></i>
@@ -147,12 +144,12 @@
 
     $(document).on("click", "#deleteImage", function(){
         let x = {
-            imageData: [currentDetails]
+            imageData: [currentImageDetails]
         };
         ajaxRequest(globalUrls.images.delete, x, function(data){
             makeToastr(data);
             loadImageOverviewAfter();
-            currentDetails = {
+            currentImageDetails = {
                 hostId: null,
                 fingerprint: null
             }
@@ -243,16 +240,192 @@
         });
     }
 
+    $(document).on("click", ".deleteAlias", function(){
+        let aliasBox = $(this).parents(".alias-box");
+        let x = {...{name: aliasBox.data("name")},...currentImageDetails};
+        ajaxRequest(globalUrls.images.aliases.delete, x, (data)=>{
+            data = makeToastr(data);
+            if(data.state == "error"){
+                return false;
+            }
+            aliasBox.remove();
+        });
+    });
+
+    $(document).on("click", ".renameAlias", function(){
+        let aliasBox = $(this).parents(".alias-box");
+        let currentName = aliasBox.data("name");
+
+        $.confirm({
+            title: `Renaming "${currentName}" Alias!`,
+            content: `
+            <form action="" class="formName">
+                <div class="form-group">
+                    <label>New name</label>
+                    <input type="text" name="name" class="form-control" required />
+                </div>
+            </form>`,
+            buttons: {
+                cancel: function () {
+                    //close
+                },
+                rename: {
+                    text: 'Rename',
+                    btnClass: 'btn-blue',
+                    action: function () {
+                        let newName = this.$content.find('input[name=name]').val().trim();
+                        if(newName == ""){
+                            $.alert('provide a name');
+                            return false;
+                        }
+                        let x = {
+                            ...{
+                                name: currentName,
+                                newName: newName
+                            },
+                            ...currentImageDetails
+                        };
+
+                        ajaxRequest(globalUrls.images.aliases.rename, x, (data)=>{
+                            data = makeToastr(data);
+                            if(data.state == "error"){
+                                return false;
+                            }
+                            aliasBox.data("name", newName);
+                            aliasBox.find(".alias-name").text(newName);
+                        });
+                    }
+                }
+            }
+        });
+    });
+
+    $(document).on("click", ".updateAliasDescription", function(){
+        let aliasBox = $(this).parents(".alias-box");
+        let currentName = aliasBox.data("name");
+        let currentDescription = aliasBox.find(".alias-description").text().trim().trimStart()
+
+        currentDescription = currentDescription == "No Description" ? "" : currentDescription;
+
+        $.confirm({
+            title: `Updating "${currentName}" Description!`,
+            content: `
+            <form action="" class="formName">
+                <div class="form-group">
+                    <label>New name</label>
+                    <textarea type="text" name="description" class="form-control">${currentDescription}</textarea>
+                </div>
+            </form>`,
+            buttons: {
+                cancel: function () {
+                    //close
+                },
+                update: {
+                    text: 'Update',
+                    btnClass: 'btn-blue',
+                    action: function () {
+                        let description = this.$content.find('textarea[name=description]').val().trim();
+                        let x = {
+                            ...{
+                                name: currentName,
+                                description: description
+                            },
+                            ...currentImageDetails
+                        };
+                        ajaxRequest(globalUrls.images.aliases.updateDescription, x, (data)=>{
+                            data = makeToastr(data);
+                            if(data.state == "error"){
+                                return false;
+                            }
+
+                            if(description == ""){
+                                aliasBox.find(".alias-description").html("<b class='text-info'>No Description</b>");
+                            }else{
+                                aliasBox.find(".alias-description").text(description);
+                            }
+
+                        });
+                    }
+                }
+            }
+        });
+    });
+
+    $(document).on("click", "#createAlias", function(){
+        $.confirm({
+            title: 'Create Image Alias!',
+            content: `
+            <form action="" class="formName">
+                <div class="form-group">
+                    <label>Name</label>
+                    <input type="text" name="name" class="form-control" required />
+                </div>
+                <div class="form-group">
+                    <label>Description (Optional)</label>
+                    <textarea class="form-control" name="description"></textarea>
+                </div>
+            </form>`,
+            buttons: {
+                cancel: function () {
+                    //close
+                },
+                create: {
+                    text: 'Create',
+                    btnClass: 'btn-blue',
+                    action: function () {
+                        let name = this.$content.find('input[name=name]').val().trim();
+                        if(name == ""){
+                            $.alert('provide a name');
+                            return false;
+                        }
+                        let description = this.$content.find("textarea[name=description]").val();
+                        let x = {
+                            ...{
+                                name: name,
+                                description: description
+                            },
+                            ...currentImageDetails
+                        };
+                        ajaxRequest(globalUrls.images.aliases.create, x, function(data){
+                            data = makeToastr(data);
+                            if(data.state == "error"){
+                                return false;
+                            }
+                            $("#imageAliasesCardBody").append(`<div class="row alias-box border-bottom mb-1 pb-1" data-name=${name}>
+                                <div class="col-md-12">
+                                    <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pb-2">
+                                        <b><u class='alias-name'>${name}</u></b>
+                                        <div class="btn-toolbar">
+                                          <div class="btn-group mr-2">
+                                              <button data-toggle="tooltip" data-placement="bottom" title="Rename alias" class='renameAlias btn btn-outline-primary btn-sm'><i class='fas fa-pencil-alt'></i></button>
+                                              <button data-toggle="tooltip" data-placement="bottom" title="Update description" class='updateAliasDescription btn btn-outline-info btn-sm'><i class='fas fa-edit'></i></button>
+                                              <button data-toggle="tooltip" data-placement="bottom" title="Delete alias" class='deleteAlias btn btn-outline-danger btn-sm'><i class='fas fa-trash'></i></button>
+                                          </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-md-12 alias-description">
+                                    ${description == "" ? "<b class='text-info'>No Description</b>"  : nl2br(description)}
+                                </div>
+                            </div>`);
+
+                        });
+                    }
+                }
+            }
+        });
+    });
+
     $(document).on("click", ".view-image", function(){
         let d = $(this).data();
-        currentDetails = d;
+        currentImageDetails = d;
         $("#imageSplash").hide();
         $("#imageDetailsView").show();
 
 
         let image = imageByHostId[d.hostId][d.fingerprint];
         let imageName =  makeImageName(image);
-        addBreadcrumbs([d.alias, imageName], ["", "active"], true)
+        addBreadcrumbs([d.hostAlias, imageName], ["", "active"], true)
 
         $("#imageName").text(imageName);
 
@@ -269,13 +442,30 @@
 
         if(image.aliases.length){
             $.each(image.aliases, (_, alias)=>{
-                trs += `<tr><td>${alias}</td></tr>`;
+                trs += `<div class="row alias-box border-bottom mb-1 pb-1" data-name=${alias.name}>
+                    <div class="col-md-12">
+                        <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pb-2">
+                            <b><u class='alias-name'>${alias.name}</u></b>
+                            <div class="btn-toolbar">
+                              <div class="btn-group mr-2">
+                                  <button data-toggle="tooltip" data-placement="bottom" title="Rename alias" class='renameAlias btn btn-outline-primary btn-sm'><i class='fas fa-pencil-alt'></i></button>
+                                  <button data-toggle="tooltip" data-placement="bottom" title="Update description" class='updateAliasDescription btn btn-outline-info btn-sm'><i class='fas fa-edit'></i></button>
+                                  <button data-toggle="tooltip" data-placement="bottom" title="Delete alias" class='deleteAlias btn btn-outline-danger btn-sm'><i class='fas fa-trash'></i></button>
+                              </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-12 alias-description">
+                        ${alias.description == "" ? "<b class='text-info'>No Description</b>"  : nl2br(alias.description)}
+                    </div>
+                </div>`;
             });
         }else{
             trs = "<tr><td>No Aliases</td></tr>"
         }
 
-        $("#imageAliasesTable > tbody").empty().append(trs);
+        $("#imageAliasesCardBody").empty().append(trs);
+        $("#imageAliasesCardBody").find('[data-toggle="tooltip"]').tooltip({html: true});
 
         trs = "";
 
